bin_PROGRAMS       = maclookup
dist_man_MANS      = ../doc/maclookup.1
dist_bin_SCRIPTS   = ../scripts/createDb.sh

nobase_include_HEADERS     = ../../include/anyexcept.hpp ../../include/maclookup.hpp ../../include/parseCmdLine.hpp ../include/maclookupcmd.hpp
maclookup_SOURCES          = ./maclookupcmd.cpp ../../src/parseCmdLine.cpp ../../src/maclookup.cpp
maclookup_CPPFLAGS         = -I../../include 
